--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "pokeapi-react",
+  "name": "react-api-requests",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://sonenka.github.io/PokeAPI-react/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -23,8 +24,8 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "vite": "^6.3.5"
-  },
-  "homepage": "https://sonenka.github.io/pokeapi-react"
+  }
 }
